# base_cal

./: CMakeLists.txt  main.cu  readme.md
base_cal/: base_any.cuh  base_map.cuh  base_type.cu  base_type.cuh  base_vec.cu  base_vec.cuh  basic_oper.cu  basic_oper.cuh  bigint.cu  bigint.cuh  bigint_field256.cu  bigint_field256.cuh  bigint_group.cu  bigint_group.cuh
base_cal/cache/: VmCache.cu  VmCache.cuh  VmCacheVecOper.cu  VmCacheVecOper.h
data_generate/: input_generator.cu  input_generator.cuh
hash/: hash_bhp.cuh  hash_pedersen.cuh  hash_poseidon.cu  hash_poseidon.cuh  poseidon_ark_and_mds.cu  poseidon_ark_and_mds.cuh
key_gen/: variables_gen.cu  variables_gen.cuh
test/: test_basic_oper.cuh  test_bigint.cuh  test_bigint_field256.cuh  test_poseidon_hash.cuh  test_variables_gen.cuh  test_vm_cache.cuh
